// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefundOrderFooter snapshot renders the initial disabled state 1`] = `
<div>
  <div
    class="modalSectionSmall"
  >
    <p
      class="modalSectionHeader"
    >
      Other
    </p>
    <label
      class="label label"
      for="refundReason"
    >
      Reason for refund
    </label>
    <div
      class="textAreaWrapper"
    >
      <textarea
        aria-describedby="refundReason-caption"
        class="textarea"
        disabled=""
        id="refundReason"
        maxlength="1000"
        name="refundReason"
        rows="1"
        style="height: 2px;"
      />
      <div
        class="caption"
        id="refundReason-caption"
      >
        Maximum length is 1000 characters.
      </div>
    </div>
    <label
      class="label label smallSpacingMarginTop"
      for="newOrderStatus"
    >
      New status
    </label>
    <div
      class="wrapper"
      role="listbox"
      tabindex="-1"
    >
      <div
        class="inputWrapper isDisabled"
      >
        <div
          class="input isGreyed"
        >
          Select order status
        </div>
        <i
          class="affix suffix toggle material-icons"
        >
          arrow_drop_down
        </i>
      </div>
    </div>
    <p
      class="caption"
    >
      If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
    </p>
  </div>
</div>
`;

exports[`RefundOrderFooter snapshot renders the initial state 1`] = `
<div>
  <div
    class="modalSectionSmall"
  >
    <p
      class="modalSectionHeader"
    >
      Other
    </p>
    <label
      class="label label"
      for="refundReason"
    >
      Reason for refund
    </label>
    <div
      class="textAreaWrapper"
    >
      <textarea
        aria-describedby="refundReason-caption"
        class="textarea"
        id="refundReason"
        maxlength="1000"
        name="refundReason"
        rows="1"
        style="height: 2px;"
      />
      <div
        class="caption"
        id="refundReason-caption"
      >
        Maximum length is 1000 characters.
      </div>
    </div>
    <label
      class="label label smallSpacingMarginTop"
      for="newOrderStatus"
    >
      New status
    </label>
    <div
      class="wrapper"
      role="listbox"
      tabindex="0"
    >
      <div
        class="inputWrapper"
      >
        <div
          class="input isGreyed"
        >
          Select order status
        </div>
        <i
          class="affix suffix toggle material-icons"
        >
          arrow_drop_down
        </i>
      </div>
    </div>
    <p
      class="caption"
    >
      If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
    </p>
  </div>
</div>
`;
